syntax = "proto3";

package vault;

option go_package = "github.com/AleksZelenchuk/vault-server/gen/go/vaultuserpb";

message VaultUser {
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
}

message CreateUserRequest {
  VaultUser user = 1;
}

message CreateUserResponse {
  string id = 1;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  VaultUser user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service VaultUserService {
  rpc Register(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
